<?xml version="1.0"?>
<package format="2">

  <name>driver_venus_638flpx</name>
  <version>1.0.0</version>
  <description>A ROS Driver for the Venus 638FLPX GPS.</description>
    <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">pcdangio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>

</package>
